# NonLinearEngine

./: .gitignore  CMakeLists.txt  LICENSE  NLRE.vcxproj  README.md  index.html  params.json
Dependencies/DirectXTex/: DirectXTexp.h
Dependencies/WICTextureLoader/: WICTextureLoader.cpp
Docs/: Boost Build Commands.txt
Editor/NLE_Editor/: NLE_Editor.pro  displaywindow.cpp  displaywindow.h  displaywindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nl_qtinputmap.cpp  nl_qtinputmap.h
NLCore/: CMakeLists.txt
NLE/: CMakeLists.txt  NLE.cpp  NLE.h  NLE.sln  NLE.vcxproj  NLE.vcxproj.filters  NLEApplicationLayer.cpp  NL_Allocator.h  NL_AssetImporter.cpp  NL_AssetImporter.h  NL_AsyncTask.h  NL_Atomic.h  NL_CameraManager.cpp  NL_CameraManager.h  NL_CerealSerializer.h  NL_CharBuffer.h  NL_CircularBuffer.h  NL_CommandBuffer.h  NL_CommonTypes.h  NL_Console.cpp  NL_Console.h  NL_ConsoleQueue.cpp  NL_ConsoleQueue.h  NL_D3D11RenderingEngine.cpp  NL_D3D11RenderingEngine.h  NL_D3D11RenderingResources.cpp  NL_D3D11RenderingResources.h  NL_D3D11Utility.cpp  NL_D3D11Utility.h  NL_D3D11Utility.inl  NL_DataCompressionManager.cpp  NL_DataCompressionManager.h  NL_DataManager.cpp  NL_DataManager.h  NL_DataRequest.h  NL_DeviceCore.cpp  NL_DeviceCore.h  NL_Distributor.h  NL_DllApi.h  NL_EditorUiManager.cpp  (+151 more)
NLE/D3D11Shaders/: Forward_VS.hlsl
NLE/Engine/: CMakeLists.txt  NL_Application.cpp  NL_Application.h  NL_AssetImporter.cpp  NL_AssetImporter.h  NL_Atomic.h  NL_Camera.cpp  NL_Camera.h  NL_CameraController.cpp  NL_CameraController.h  NL_CameraManager.cpp  NL_CameraManager.h  NL_CommonTypes.h  NL_Console.cpp  NL_Console.h  NL_ConsoleOutType.h  NL_ConsolePump.cpp  NL_ConsolePump.h  NL_D3D11Device.cpp  NL_D3D11Device.h  NL_D3D11Device.inl  NL_D3D11Utility.cpp  NL_D3D11Utility.h  NL_D3D11Utility.inl  NL_GScene.cpp  NL_GScene.h  NL_GlfwInputMap.cpp  NL_GlfwInputMap.h  NL_IApplication.cpp  NL_ICameraController.h  NL_ICameraManager.h  NL_IConsolePump.h  NL_IInputProcessor.h  NL_INle.h  NL_IRenderer.h  NL_IRenderingEngine.h  NL_ISceneManager.h  NL_IScriptEngine.h  NL_IUiManager.h  NL_InputEvents.h  (+25 more)
NLE/Engine/Shaders/: Forward_PS.hlsl  Forward_PosText_PS.hlsl  Forward_VS.hlsl
NLE/NLApplication/: CMakeLists.txt  NL_Application.cpp  NL_Application.h  NL_IApplication.h
NLE/NLCore/: CMakeLists.txt  NLCore.cpp  NLCore.h  NL_AsyncTask.h  NL_Clock.cpp  NL_Clock.h  NL_Core.cpp  NL_Core.h  NL_DataAggregator.h  NL_DataContainer.h  NL_DataContainer.inl  NL_DataDistributor.cpp  NL_DataDistributor.h  NL_DataDistributor.inl  NL_DataManager.cpp  NL_DataManager.h  NL_DataPack.h  NL_DataPacket.h  NL_DataRequest.h  NL_DeviceCore.cpp  NL_DeviceCore.h  NL_DeviceCore.inl  NL_Distributor.h  NL_ExecutionDesc.h  NL_IEngine.h  NL_ISystem.h  NL_MSDistributor.cpp  NL_MSDistributor.h  NL_MSDistributor.inl  NL_MasterContainer.cpp  NL_MasterContainer.h  NL_MasterContainer.inl  NL_MemManager.cpp  NL_MemManager.h  NL_MemPool.cpp  NL_MemPool.h  NL_PContainer.cpp  NL_PContainer.h  NL_PContainer.inl  NL_SContainer.cpp  (+37 more)
NLE/NLE/: CMakeLists.txt  NL_Nle.cpp  NL_Nle.h
NLE/Shaders/: DeferredGBuff_PS.hlsl  DeferredGBuff_VS.hlsl  Forward_PosText_VS.hlsl  Forward_Pos_VS.hlsl
NLRE/: NLRE.sln  NLRE.vcxproj  NLRE.vcxproj.filters  ReadMe.txt
NLRE/Shaders/: DeferredGBuff_TextNormal_BlinnPhong_PS.cso  DeferredGBuff_TextNormal_BlinnPhong_VS.cso  Forward_PosText_PS.cso  Forward_PosText_VS.cso  Forward_Pos_PS.cso  Forward_Pos_VS.cso
Samples/: CMakeLists.txt
Samples/CoreSamples/: CMakeLists.txt
Samples/CoreSamples/NLEConcurrencyTest/: CMakeLists.txt  ConcurrencyTest.cpp  SysInterface.cpp  TestSystem.cpp  TestSystem.h
Samples/CoreSamples/NLELargeDataSyncTest/: CMakeLists.txt  Data.h  DataSyncTest.cpp  SysInterface.h  TestSystem.cpp  TestSystem.h
Samples/CoreSamples/NLESimpleDataSyncTest/: CMakeLists.txt  DataSyncTest.cpp  RSysInterface.cpp  ReaderSystem.cpp  ReaderSystem.h  WSysInterface.cpp  WSysInterface.h  WriterSystem.cpp  WriterSystem.h
Samples/EngineSamples/: CMakeLists.txt
Samples/EngineSamples/EngineTest/: CMakeLists.txt  EngineTest.cpp  NL_GlfwApplicationLayer.cpp  NL_GlfwApplicationLayer.h  NL_GlfwInputMap.cpp  NL_GlfwInputMap.h
Samples/NLEConcurrencyTest/: CMakeLists.txt  ConcurrencyTest.cpp  TestStateManager.h  TestSystem.cpp  TestSystem.h
Samples/NLEDataSyncTest/: CMakeLists.txt  DataSyncTest.cpp  ReaderSystem.cpp  ReaderSystem.h  SharedDataId.h  TestStateManager.h  WriterSystem.cpp  WriterSystem.h
Samples/NLELargeDataSyncTest/: CMakeLists.txt  Data.h  DataSyncTest.cpp  System.cpp  System.h  TestSystem.cpp  TestSystem.h
Samples/NLESimpleDataSyncTest/: CMakeLists.txt  DataSyncTest.cpp  RSysInterface.h  ReaderSystem.cpp  ReaderSystem.h  WriterSystem.cpp  WriterSystem.h
Samples/NLETest/: CMakeLists.txt  NLETest.cpp  TestStateManager.h  TestSysState.cpp  TestSysState.h  TestSystem.cpp  TestSystem.h
Tools/toNle/: CMakeLists.txt  NL_AssetConverter.cpp  NL_AssetConverter.h
include/: Container.h  NLE.h  NLEApplicationLayer.h  NLECommon.h  NLEConfigurator.h  NLEDllApi.h  NLEInterface.h  NLELog.h  NLELogInterface.h  NLEMath.h  NLEResources.h  NLESingleInstance.h  NLETimer.h  NLEWindowReference.h  NLRE.h  NLREResources.h  stdafx.h
include/Application/: NLEApplicationLayer.h  NLEGlfwApplicationLayer.h  NLEGlfwInputMap.h
include/GUI/: NLECeguiInputMap.h  NLEGuiManager.h  NLEGuiManagerInterface.h
include/Input/: NLEInputEventListener.h  NLEInputEvents.h  NLEInputProcessor.h  NLEInputProcessorInterface.h  NLEInputSupply.h
include/InputProcessor/: NLECeguiInputMap.h  NLEClipboardListener.h  NLEGlfwInputMap.h  NLEInputListener.h  NLEInputMap.h  NLEInputProcessor.h  NLEWindowListener.h
include/Math/: NLEMath.h
include/NLREMain/: NLREAlignedAllocator.h  NLRECommon.h  NLREConfigurator.h  NLRELog.h  stdafx.h
include/RenderingDevice/: NLREDeviceController.h  NLREForwardRT.h  NLREInputLayoutDescriptions.h  NLRERenderStateID.h  NLRERenderingDevice.h  (+2 more)
src/: Container.cpp  NLE.cpp  NLEApplicationLayer.cpp  NLELog.cpp  NLETimer.cpp  NLRE.cpp  NLRECommon.h  NLREConfigurator.h  main.cpp  stdafx.cpp  stdafx.h
(+221 files in other folders)
