CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT (NonLinearEngine)

set (NLE_VERSION_MAJOR 0)
set (NLE_VERSION_MINOR 9)
set (NLE_VERSION_PATCH 0)


IF(MSVC)
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /WX /arch:AVX /Ox /Ob2 /Ot /Gt")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /WX /arch:AVX /Od /Ob0")
ENDIF(MSVC)

# Configuration GUI goes here

SET(NLE_SDK_INSTALL_PATH 
	${PROJECT_BINARY_DIR}/${PROJECT_NAME} CACHE PATH "NLE SDK Installation Directory")
IF(NLE_SDK_INSTALL_PATH STREQUAL "")
	MESSAGE(SEND_ERROR "NLE SDK Installation Directory much be specified")
ENDIF(NLE_SDK_INSTALL_PATH STREQUAL "")

SET(NLE_SAMPLES_INSTALL_PATH 
	${NLE_SDK_INSTALL_PATH}/Samples CACHE PATH "NLE Samples Installation Directory")
IF(NLE_SAMPLES_INSTALL_PATH STREQUAL "")
	MESSAGE(SEND_ERROR "NLE Samples Installation Directory much be specified")
ENDIF(NLE_SAMPLES_INSTALL_PATH STREQUAL "")

SET(NLE_HOST_OS CACHE STRING "Host Operating System. Choose: \n\n Windows")
IF(NLE_HOST_OS STREQUAL "")
	MESSAGE(SEND_ERROR "Host Operating System much be specified")
ENDIF(NLE_HOST_OS STREQUAL "")

SET(NLE_TARGET_ARCHITECTURE CACHE STRING "Target Architecture. Choose: \n\n x86 \n x64")
IF(NLE_TARGET_ARCHITECTURE STREQUAL "")
	MESSAGE(SEND_ERROR "Target Architecture much be specified")
ENDIF(NLE_TARGET_ARCHITECTURE STREQUAL "")

SET(NLE_ROOT_DIR ${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(NLE)
ADD_SUBDIRECTORY(Samples)

